# src/auth/auth.controller.ts
@@ -5,7 +5,9 @@ import { UsersService } from 'src/users/users.service';
 import { LoginDto } from './dto/auth.dto';
 import { AuthService } from './auth.service';
 import { RefreshJwtGuard } from './guards/refresh.guard';
+import { ApiTags } from '@nestjs/swagger';
 
+@ApiTags('Authentikáció')
 @Controller('auth')
 export class AuthController {
     constructor(private readonly usersService: UsersService,
