# src/docs/api.yaml
@@ -28,6 +28,8 @@ paths:
       responses:
         '200':
           description: ''
+      security:
+        - access-token: []
       summary: A legutóbbi 10 edzés
       tags:
         - Edzes
@@ -103,7 +105,7 @@ paths:
         '404':
           description: Az edzések nem találhatóak
       security:
-        - bearer: []
+        - access-token: []
       summary: Egy user adott intervallumon belüli edzései
       tags:
         - Edzes
@@ -127,6 +129,8 @@ paths:
                 $ref: '#/components/schemas/Edzes'
         '404':
           description: A felhasználó nem található
+      security:
+        - access-token: []
       summary: Új edzés létrehozása
       tags:
         - Edzes
@@ -179,6 +183,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/EdzesekResponseDto'
+      security:
+        - access-token: []
       summary: Összes edzés lekérése
       tags:
         - Edzes
@@ -216,6 +222,8 @@ paths:
                 $ref: '#/components/schemas/Edzes'
         '404':
           description: Az edzés vagy a gyakorlat nem található
+      security:
+        - access-token: []
       summary: Gyakorlat hozzáadása edzéshez
       tags:
         - Edzes
@@ -245,6 +253,8 @@ paths:
       responses:
         '200':
           description: ''
+      security:
+        - access-token: []
       summary: Gyakorlat törlése edzésből
       tags:
         - Edzes
@@ -288,6 +298,8 @@ paths:
                 $ref: '#/components/schemas/Edzes'
         '404':
           description: Az edzés, a gyakorlat vagy a felhasználó nem található
+      security:
+        - access-token: []
       summary: Szett hozzáadása gyakorlathoz
       tags:
         - Edzes
@@ -335,6 +347,8 @@ paths:
                 $ref: '#/components/schemas/Edzes'
         '404':
           description: Az edzés, a gyakorlat vagy a szett nem található
+      security:
+        - access-token: []
       summary: Szett módosítása
       tags:
         - Edzes
@@ -371,6 +385,8 @@ paths:
           description: A szett sikeresen törölve
         '404':
           description: Az edzés, a gyakorlat vagy a szett nem található
+      security:
+        - access-token: []
       summary: Szett törlése
       tags:
         - Edzes
@@ -407,6 +423,8 @@ paths:
                     description: Az összes érintett fő izomcsoport azonosítója
         '400':
           description: Hibás kérés - Érvénytelen felhasználó azonosító
+      security:
+        - access-token: []
       summary: Edzésekben használt izomcsoportok lekérése
       tags:
         - Edzes
@@ -444,6 +462,8 @@ paths:
                 $ref: '#/components/schemas/Edzes'
         '404':
           description: Az edzés nem található
+      security:
+        - access-token: []
       summary: Egy user adott napi edzésének részletes adatai
       tags:
         - Edzes
@@ -469,6 +489,8 @@ paths:
                 $ref: '#/components/schemas/Edzes'
         '404':
           description: Az edzés nem található
+      security:
+        - access-token: []
       summary: Egy edzés részletes adatai
       tags:
         - Edzes
@@ -497,6 +519,8 @@ paths:
                 $ref: '#/components/schemas/Edzes'
         '404':
           description: Az edzés nem található
+      security:
+        - access-token: []
       summary: Edzés módosítása
       tags:
         - Edzes
@@ -515,6 +539,8 @@ paths:
           description: Az edzés sikeresen törölve
         '404':
           description: Az edzés nem található
+      security:
+        - access-token: []
       summary: Edzés törlése
       tags:
         - Edzes
@@ -548,6 +574,8 @@ paths:
           description: Hiba történt az edzés állapotának módosítása során
         '404':
           description: Az edzés nem található vagy nem tartozik a megadott felhasználóhoz
+      security:
+        - access-token: []
       summary: Edzés véglegesítésének állapotának módosítása
       tags:
         - Edzes
@@ -579,6 +607,8 @@ paths:
           description: A sablon vagy a felhasználó nem található
         '409':
           description: Az adott napon már létezik edzés
+      security:
+        - access-token: []
       summary: Új edzés létrehozása sablonból
       tags:
         - Edzes
@@ -626,11 +656,14 @@ paths:
                     description: Az érintett fő izomcsoportok azonosítói
         '400':
           description: Hibás kérés
+      security:
+        - access-token: []
       summary: Aktuális heti edzések lekérése
       tags:
         - Edzes
   /users:
     get:
+      description: Az összes felhasználó lekérdezése, csak admin jogosultsággal érhető el
       operationId: findAll
       parameters:
         - name: page
@@ -669,11 +702,42 @@ paths:
             type: string
       responses:
         '200':
-          description: ''
+          description: Sikeres lekérdezés, összes felhasználó visszaadva.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserResponseDto'
+              examples:
+                example:
+                  summary: Visszatérési példa
+                  value:
+                    items:
+                      - user_id: 37
+                        username: Admin
+                        email: admin@gmail.com
+                        suly: null
+                        magassag: null
+                        isAdmin: true
+                    meta:
+                      currentPage: 1
+                      itemsPerPage: 1
+                      totalItems: 7
+                      totalPages: 7
+        '401':
+          description: Invalid Token
+        '403':
+          description: Hozzáférés megtagadva - csak Adminok
+      security:
+        - access-token: []
+      summary: Összes felhasználó lekérdezése
       tags:
         - Users
   /users/{id}:
     get:
+      description: >-
+        Egy felhasználó lekérdezése azonosító alapján. Egy felhasználó csak a
+        saját adatait érheti el, míg admin jogosultsággal az összes felhasználó
+        adatai lekérdezhetőek.
       operationId: findOne
       parameters:
         - name: id
@@ -683,10 +747,33 @@ paths:
             type: string
       responses:
         '200':
-          description: ''
+          description: Felhasználó adatai visszaadva.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserDto'
+              examples:
+                example:
+                  summary: Visszatérési példa
+                  value:
+                    user_id: 37
+                    username: Admin
+                    email: admin@gmail.com
+                    suly: null
+                    magassag: null
+                    isAdmin: true
+        '401':
+          description: Unauthorized
+      security:
+        - access-token: []
+      summary: Egy felhasználó lekérdezése
       tags:
         - Users
     patch:
+      description: >-
+        Felhasználó adatainak módosítása azonosító alapján. Egy felhasználó csak
+        a saját adatait módosíthatja, míg admin jogosultsággal az összes
+        felhasználó módosítható.
       operationId: update
       parameters:
         - name: id
@@ -702,10 +789,32 @@ paths:
               $ref: '#/components/schemas/UpdateUserDto'
       responses:
         '200':
-          description: ''
+          description: Felhasználó adatai sikeresen módosítva.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserDto'
+              examples:
+                example:
+                  summary: Visszatérési példa
+                  value:
+                    user_id: 37
+                    username: Admin
+                    email: admin@gmail.com
+                    suly: 70
+                    magassag: 175
+                    isAdmin: true
+        '401':
+          description: Unauthorized
+      security:
+        - access-token: []
+      summary: Felhasználó adatainak módosítása
       tags:
         - Users
     delete:
+      description: >-
+        Felhasználó törlése azonosító alapján. Csak admin jogosultsággal érhető
+        el.
       operationId: remove
       parameters:
         - name: id
@@ -715,11 +824,27 @@ paths:
             type: string
       responses:
         '200':
-          description: ''
+          description: Felhasználó sikeresen törölve.
+          content:
+            application/json:
+              schema:
+                example:
+                  message: User and all related data successfully deleted
+        '401':
+          description: Unauthorized
+        '403':
+          description: Hozzáférés megtagadva - csak Adminok
+      security:
+        - access-token: []
+      summary: Felhasználó törlése
       tags:
         - Users
   /users/{id}/bmi:
     get:
+      description: >-
+        BMI kiszámítása felhasználó azonosító alapján. Egy felhasználó csak a
+        saját BMI-jét kérdezheti le, míg admin jogosultsággal az összes
+        felhasználó BMI-je lekérdezhető.
       operationId: getBMI
       parameters:
         - name: id
@@ -729,11 +854,25 @@ paths:
             type: string
       responses:
         '200':
-          description: ''
+          description: BMI kiszámítása sikeres.
+          content:
+            application/json:
+              schema:
+                example:
+                  bmi: '22.50'
+                  type: Normál
+        '401':
+          description: Unauthorized
+      security:
+        - access-token: []
+      summary: BMI kiszámítása
       tags:
         - Users
   /users/{id}/admin:
     patch:
+      description: >-
+        Admin jogosultság módosítása felhasználó azonosító alapján. Csak admin
+        jogosultsággal érhető el.
       operationId: changeAdmin
       parameters:
         - name: id
@@ -749,7 +888,19 @@ paths:
               $ref: '#/components/schemas/AdminDto'
       responses:
         '200':
-          description: ''
+          description: Admin státusz sikeresen megváltoztatva.
+          content:
+            application/json:
+              schema:
+                example:
+                  message: Admin státusz sikeresen megváltoztatva
+        '401':
+          description: Unauthorized
+        '403':
+          description: Hozzáférés megtagadva - csak Adminok
+      security:
+        - access-token: []
+      summary: Admin jogosultság módosítása
       tags:
         - Users
   /auth/register:
@@ -766,7 +917,7 @@ paths:
         '201':
           description: ''
       tags:
-        - Auth
+        - Authentikáció
   /auth/login:
     post:
       operationId: login
@@ -781,7 +932,7 @@ paths:
         '201':
           description: ''
       tags:
-        - Auth
+        - Authentikáció
   /auth/refresh:
     post:
       operationId: refreshToken
@@ -790,7 +941,7 @@ paths:
         '201':
           description: ''
       tags:
-        - Auth
+        - Authentikáció
   /gyakorlat:
     post:
       operationId: create
@@ -814,6 +965,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponseDto'
+      security:
+        - access-token: []
       summary: Új gyakorlat létrehozása
       tags:
         - Gyakorlat
@@ -879,6 +1032,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponseDto'
+      security:
+        - access-token: []
       summary: Összes gyakorlat lekérése
       tags:
         - Gyakorlat
@@ -904,6 +1059,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GyakorlatNotFoundDto'
+      security:
+        - access-token: []
       summary: Gyakorlat lekérése azonosító alapján
       tags:
         - Gyakorlat
@@ -940,6 +1097,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GyakorlatNotFoundDto'
+      security:
+        - access-token: []
       summary: Gyakorlat módosítása azonosító alapján
       tags:
         - Gyakorlat
@@ -964,6 +1123,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GyakorlatNotFoundDto'
+      security:
+        - access-token: []
       summary: Gyakorlat törlése azonosító alapján
       tags:
         - Gyakorlat
@@ -987,6 +1148,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponseDto'
+      security:
+        - access-token: []
       summary: Összes Izom lekérése
       tags:
         - Izomcsoport
@@ -1012,6 +1175,8 @@ paths:
           description: A gyakorlat már hozzá van rendelve a felhasználóhoz
         '404':
           description: A gyakorlat vagy a felhasználó nem található
+      security:
+        - access-token: []
       summary: Új user-gyakorlat kapcsolat létrehozása
       tags:
         - User Gyakorlat
@@ -1033,6 +1198,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserGyakorlat'
+      security:
+        - access-token: []
       summary: Új edzés history bejegyzés létrehozása
       tags:
         - User Gyakorlat
@@ -1084,6 +1251,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserGyakorlatokResponseDto'
+      security:
+        - access-token: []
       summary: Felhasználó összes gyakorlatának lekérése
       tags:
         - User Gyakorlat
@@ -1119,6 +1288,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserGyakorlatNotFoundDto'
+      security:
+        - access-token: []
       summary: Egy konkrét user-gyakorlat részletes adatai
       tags:
         - User Gyakorlat
@@ -1151,12 +1322,25 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserGyakorlatNotFoundDto'
+      security:
+        - access-token: []
       summary: Felhasználó gyakorlatának törlése
       tags:
         - User Gyakorlat
 info:
   title: RepVault
-  description: RepVault API
+  description: |2-
+
+          RepVault API
+      
+          A védett végpontok eléréséhez Bearer típusú JWT tokent kell használnia.
+          Az authentikáció fül alatt lévő /login végponton keresztül tud tokenhez jutni. Adja meg a felhasználónevét és jelszavát,
+          illetve ha még nincs felhasználója, regisztráljon az /register végponton keresztül és aztán jelentkezzen be. 
+          Ezt követően kattintson az "Authorize" gombra a Swagger felületén, majd másolja be a tokenjét.
+      
+          Miután megadta a tokent, a Swagger automatikusan hozzáadja azt az "Authorization" fejléchez, 
+          így Ön tesztelheti a védett végpontokat.
+        
   version: '1.0'
   contact: {}
 tags: []
@@ -1433,6 +1617,102 @@ components:
           type: boolean
           description: Sablon-e az edzés
           example: false
+    User:
+      type: object
+      properties:
+        user_id:
+          type: number
+          example: 1
+          description: A felhasználó azonosítója
+        username:
+          type: string
+          example: teszt
+          description: A felhasználó felhasználóneve
+        email:
+          type: string
+          example: teszt@gmail.com
+          description: A felhasználó email címe
+        password:
+          type: string
+          example: Teszt1234.
+          description: >-
+            A felhasználó jelszava (erős jelszó, legalább 8 karakter,
+            tartalmazzon kis- és nagybetűt, számot és speciális karaktert)
+        isAdmin:
+          type: boolean
+          example: false
+          description: A felhasználó admin jogosultsággal rendelkezik-e
+        suly:
+          type: number
+          example: 80
+          description: A felhasználó a súlya
+        magassag:
+          type: number
+          example: 180
+          description: A felhasználó a magassága
+      required:
+        - user_id
+        - username
+        - email
+        - password
+        - isAdmin
+    UserResponseDto:
+      type: object
+      properties:
+        items:
+          type: array
+          items:
+            description: List of users
+            type: array
+            items:
+              $ref: '#/components/schemas/User'
+        meta:
+          type: object
+          description: Pagination metadata
+          example:
+            currentPage: 1
+            itemsPerPage: 1
+            totalItems: 7
+            totalPages: 7
+      required:
+        - items
+        - meta
+    UserDto:
+      type: object
+      properties:
+        user_id:
+          type: number
+          description: Unique identifier of the user
+          example: 37
+        username:
+          type: string
+          description: Username of the user
+          example: Admin
+        email:
+          type: string
+          description: Email address of the user
+          example: admin@gmail.com
+        suly:
+          type: number
+          description: User weight in kilograms
+          example: null
+          nullable: true
+        magassag:
+          type: number
+          description: User height in centimeters
+          example: null
+          nullable: true
+        isAdmin:
+          type: boolean
+          description: Indicates if the user is an administrator
+          example: true
+      required:
+        - user_id
+        - username
+        - email
+        - suly
+        - magassag
+        - isAdmin
     UpdateUserDto:
       type: object
       properties:
